--- a/u-boot-2017.09/board/samsung/itop4412/Kconfig
+++ b/u-boot-2017.09/board/samsung/itop4412/Kconfig
@@ -1,12 +1,12 @@
-if TARGET_ORIGEN
+if TARGET_ITOP4412
 
 config SYS_BOARD
-	default "origen"
+	default "itop4412"
 
 config SYS_VENDOR
 	default "samsung"
 
 config SYS_CONFIG_NAME
-	default "origen"
+	default "itop4412"
 
 endif
